--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "sess": [1],
     "price": [2],
     "real_name": [1],
-    "nick_name": "施嘉宏",
+    "nick_name": "",
     "ticket_num": 3,
     "driver_path": "./chromedriver.exe",
     "damai_url": "https://www.damai.cn/",
